--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde_json = "1.0"
 string-error = "0.1.0"
 chrono = "0.4.23"
+home = "0.5.4"
 
 [dev-dependencies]
 mockall = "0.11.2"
